# lead-test

./: README.md  pyproject.toml
api/: admin.py  apps.py  cron.py  serializers.py  services.py  upctasks.py  urls.py
api/migrations/: 0001_initial.py  0002_auto_20240208_1709.py
api/models/: __init__.py  upc_lead.py
api/views/: __init__.py  hello_world.py  upc_lead.py
app/: settings.py  urls.py
